--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "PeTrack",
   "version": "1.0.0",
   "description": "package.json",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.mjs",
-    "dev": "nodemon index.mjs"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Priya rathore",
   "license": "ISC",
